# OO_Design_Pattern_Cpp

./: .gitignore  README.md
CDCoverProxy/: CMakeLists.txt  main.cpp
CandyMachine/: CMakeLists.txt  CandyMachine.cpp  CandyMachine.h  main.cpp  states.cpp  states.h
ClassProject/: CMakeLists.txt  main.cpp
CoffeeTemplate/: CMakeLists.txt  main.cpp
DuckAdapter/: CMakeLists.txt  main.cpp
DuckSim/: CMakeLists.txt  main.cpp
GreedyArrange/: CMakeLists.txt  main.cpp
HotOrNotProxy/: CMakeLists.txt  main.cpp
MenuComponent/: CMakeLists.txt  main.cpp
MenuIterator/: CMakeLists.txt  main.cpp
PizzaFactory/: CMakeLists.txt  main.cpp
RemoterCommand/: CMakeLists.txt  main.cpp
SinglePattern/: CMakeLists.txt  main.cpp
StarBuzz/: CMakeLists.txt  main.cpp
WeatherStation/: CMakeLists.txt  main.cpp
